# minitt-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml
.circleci/: config.yml
.github/: README.md
.github/workflows/: rust.yml
minitt-util/: Cargo.toml  README.md
minitt-util/src/: cli.rs  io.rs  lib.rs  repl.rs
rustdoc/: generate.sh  katex-header.html
samples/: README.md  REPL.md  cargo-doc.sh  test.pl
samples/basics/: lexical-json.flags  lexical-json.minitt  lexical-json.out  local-binding.minitt  parse-only.flags  parse-only.minitt  parse-only.out  reference.minitt  simple.minitt  syntacic-sugar.flags  syntacic-sugar.minitt  syntacic-sugar.out  unicode.minitt  unicode.out  univese.minitt
samples/dependent/: function.minitt  higher-level.minitt  level.minitt  long-function.minitt  sigma.minitt
samples/first-class-sum/: FirstClassSum.minitt  subtyping.minitt  sum-literals.minitt
samples/negative/: bad-level.minitt  bad-level.out  bad-merge.minitt  bad-merge.out  consume-end.out  duplicate-branch.minitt  duplicate-branch.out  girard-paradox.minitt  girard-paradox.out  level_fail.minitt  level_fail.out  var-merge.minitt  var-merge.out
samples/sum-fun/: nat.minitt
samples/sum-split/: bool.minitt  empty-eliminate.minitt  maybe.minitt  maybe.out  merge.minitt  nat.minitt
src/: ast.rs  check.rs  eval.rs  grammar.pest  lib.rs  main.rs  normal.rs  parser.rs  pretty.rs  read_back.rs  reduce.rs  syntax.rs  term.rs  type_check.rs
src/check/: decl.rs  expr.rs  mod.rs  normal.rs  read_back.rs  subtype.rs  tcm.rs  tests.rs
src/cli/: args.rs  io.rs  mod.rs  repl.rs  util.rs
