[package]
name = "minitt"
version = "0.3.10"
authors = ["ice1000 <ice1000kotlin@foxmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Mini-TT, a dependently-typed lambda calculus, extended and (re)implemented in Rust"
readme = "README.md"
categories = ["development-tools"]
documentation = "https://docs.rs/minitt"
repository = "https://github.com/owo-lang/minitt-rs"

[package.metadata.docs.rs]
features = ["parser"]
rustdoc-args = ["--html-in-header", "rustdoc/katex-header.html", "--document-private-items"]

[badges]
appveyor = { repository = "owo-lang/minitt-rs", service = "github" }
circle-ci = { repository = "owo-lang/minitt-rs", branch = "master" }
maintenance = { status = "as-is" }
is-it-maintained-issue-resolution = { repository = "owo-lang/minitt-rs" }
is-it-maintained-open-issues = { repository = "owo-lang/minitt-rs" }

[workspace]
members = ["minitt-util"]

[dependencies]
pest = { version = "2.1.2", features = ["pretty-print"], optional = true }
pest_derive = { version = "2.1.0", optional = true }
clap = { version = "2.33.0", optional = true }
minitt-util = { path = "minitt-util", features = ["cli", "repl"] }
structopt = { version = "0.3", optional = true }
rustyline = { version = "5.0.0", optional = true }
either = "1.5"

[features]
parser = ["pest", "pest_derive"]
cli = ["clap", "structopt", "rustyline"]

[lib]
name = "minitt"
path = "src/lib.rs"

[[bin]]
name = "minittc"
path = "src/cli/mod.rs"
required-features = ["cli", "parser"]
