[package]
name = "minitt-util"
version = "0.1.0"
authors = ["ice1000 <ice1000kotlin@foxmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "CLI Utilities extracted from Mini-TT language's type-checker"
readme = "README.md"
categories = ["development-tools"]
documentation = "https://docs.rs/minitt-util"
repository = "https://github.com/owo-lang/minitt-rs"

[badges]
appveyor = { repository = "owo-lang/minitt-rs", service = "github" }
circle-ci = { repository = "owo-lang/minitt-rs", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
structopt = { version = "0.3", optional = true }
rustyline = { version = "5.0.0", optional = true }
clap = { version = "2.33.0", optional = true }

[features]
cli = ["clap", "structopt"]
repl = ["rustyline"]

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]
